--- a/http/assets/backoffice/index.html
+++ b/http/assets/backoffice/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf8">
     <title>Backoffice</title>
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
