--- a/src/http/assets/backoffice/index.html
+++ b/src/http/assets/backoffice/index.html
@@ -1,19 +1,13 @@
 <html>
-
-<head>
-    <meta charset="utf8">
-    <title>Backoffice</title>
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <link rel="stylesheet" href="css/custom.css">
-</head>
-
-<body>
-
-    <div id="app"></div>
-
-    <script src="js/mithril.min.js"></script>
-    <script src="js/app.js"></script>
-
-</body>
-
+    <head>
+        <meta charset="utf8">
+        <title>Backoffice</title>
+        <link rel="stylesheet" href="assets/css/bulma.min.css">
+        <link rel="stylesheet" href="assets/css/custom.css">
+    </head>
+    <body>
+        <div id="app"></div>
+        <script src="assets/js/mithril.min.js"></script>
+        <script src="assets/js/app.js"></script>
+    </body>
 </html>
