Some fixes for mobile.

--- a/src/backoffice-ui/src/index.html
+++ b/src/backoffice-ui/src/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <title>Gonference</title>
+        <meta charset="utf8">
         <link rel="stylesheet" href="style/main.scss">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
     </head>
     <body>
         <div id="app"></div>
